--- a/Unity_HLSM.jinja
+++ b/Unity_HLSM.jinja
@@ -4,20 +4,24 @@
                 case State.{{ state.name }}:
                 {%- for t_name, transition in state.transitions.iteritems() %}
                     {%- if transition.norm and transition.neg %}
-                    if( {{t_name}}() ) {
+                    if( {{t_name}}() ) 
                         state = State.{{transition.norm}};
-                    }
-                    else {
+                    else 
                        state = State.{{transition.neg}};
-                    }
                     {%- elif transition.norm %}
-                    if( {{t_name}}() ) {
+                    {%- if t_name %}
+                    if( {{t_name}}() ) 
                         state = State.{{transition.norm}};
-                    }
+                    {%- else %}
+                    state = State.{{transition.norm}};
+                    {%- endif %}
                     {%- elif transition.neg%}
-                    if( !{{t_name}}() ) {
+                    {%- if t_name %}
+                    if( !{{t_name}}() ) 
                         state = State.{{transition.neg}};
-                    }
+                    {%- else %}
+                    state = State.{{transition.neg}};
+                    {%- endif %}
                     {%- endif %}
                {%- endfor %}
                     break;
