Fixed Java Target

--- a/templates/CSharp.jinja
+++ b/templates/CSharp.jinja
@@ -13,4 +13,5 @@ using UnityEngine;{%- endblock -%}
     }  
     public State state = State.{{ init_state }};{% endblock %}
 {% block extra_functions %}
+protected virtual void OnTransition() { }
 {% endblock %}
