--- a/templates/c_like_base.jinja
+++ b/templates/c_like_base.jinja
@@ -20,7 +20,7 @@ public {{class_prefix}} class {{ class_name }}{% block inheritance %}{% endblock
     protected {{class_prefix}} void OnTransition();
 	{%- endblock %}
     
-    public {{return_type}} Step()
+    public void Step()
     {
 		State prevState = state;
         _Step();
@@ -32,7 +32,7 @@ public {{class_prefix}} class {{ class_name }}{% block inheritance %}{% endblock
             }
         {% endblock %}
     }
-    public {{return_type}} MultiStep()
+    public void MultiStep()
     {
         State prevState;
         do {
