--- a/templates/c_like_base.jinja
+++ b/templates/c_like_base.jinja
@@ -20,6 +20,7 @@ public {{class_prefix}} class {{ class_name }}{% block inheritance %}{% endblock
     protected {{class_prefix}} void OnTransition();
 	{%- endblock %}
     
+    {%- block StepFunction %}
     public {{return_type}} Step()
     {
 		State prevState = state;
@@ -45,6 +46,7 @@ public {{class_prefix}} class {{ class_name }}{% block inheritance %}{% endblock
         }
         while(prevState != state) ;
     }
+    {%- endblock %}
     
     protected {{return_type}} _Step()
     {
